<resources>
    <string name="app_name">senyum media</string>

    <string name="home">Home</string>
    <string name="kategori">Kategori</string>
    <string name="Telusuri">Telusuri</string>
    <string name="Troli">Troli</string>
    <string name="AkunSaya">Akun Saya</string>
    <string name="brand">Brand</string>
    <string name="lihatlainnya">Lihat Lainnya</string>
    <string name="pencarian">PENCARIAN POPULER</string>
    <string name="flash_sale_txt">FLASH SALE</string>
    <string name="populer_produk">POPULER PRODUK</string>
    <string name="harga">Rp. 1,000,000</string>
    <string name="rekomendasi">REKOMENDASI</string>
    <string name="title_activity_fragment_example">FragmentExample</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
